--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
             <div class="row g-0">
                
 
-                <div class="collection-list mt-4 row gx-0 gy-3">
-                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 best">
+                <div class=" mt-4 row gx-0 gy-3">
+                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
                         <div class="collection-img position-relative">
                             <img src="./images/special_product_1.jpg" alt="" class="w-100">
                             <span
@@ -318,7 +318,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 feat">
+                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
                         <div class="collection-img position-relative">
                             <img src="./images/special_product_2.jpg" alt="" class="w-100">
                             <span
@@ -336,7 +336,7 @@
                             <span class="fw-bold">$ 45.50</span>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 new">
+                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
                         <div class="collection-img position-relative">
                             <img src="./images/special_product_3.jpg" alt="" class="w-100">
                             <span
@@ -354,7 +354,7 @@
                             <span class="fw-bold">$ 45.50</span>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 best">
+                    <div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
                         <div class="collection-img position-relative">
                             <img src="./images/special_product_4.jpg" alt="" class="w-100">
                             <span
